<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Tprod"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/infoProd" />

        <TextView
            android:id="@+id/Tcost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/infoCost" />

        <TextView
            android:id="@+id/Tqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/infoQual" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/Capple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoApple" />

        <EditText
            android:id="@+id/CostApple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0" />

        <EditText
            android:id="@+id/QuantApple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/Cblue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoBlueberry" />

        <EditText
            android:id="@+id/CostBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0" />

        <EditText
            android:id="@+id/QuanBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/Cstraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoStrawberry" />

        <EditText
            android:id="@+id/CostStraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0" />

        <EditText
            android:id="@+id/QuanStraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/Cpotat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoPotatoes" />

        <EditText
            android:id="@+id/CostPotat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0" />

        <EditText
            android:id="@+id/QuanPotat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0" />
    </LinearLayout>

    <Button
        android:id="@+id/Bcalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="button_click"
        android:text="@string/infoCalculate" />

</LinearLayout>